[feature/feature_ui_update_zth] Fixed textbox align

--- a/public/css/employee/employeelist.css
+++ b/public/css/employee/employeelist.css
@@ -60,7 +60,7 @@
 
 input[type=date] {
   margin: 10px 0;
-  padding: 6px 10px;
+  padding: 7px 10px;
   border: 1px solid #d1d0d0;
   text-align: right;
   border-radius: 10px;
